--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "add": "^2.0.6",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
     "firebase-tools": "^13.30.0",
+    "framer-motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
