--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
-    "bootstrap": "^5.3.3",
     "add": "^2.0.6",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "firebase": "^11.3.0",
     "firebase-tools": "^13.30.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bulma-components": "^4.1.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.1.5",
