--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "add": "^2.0.6",
     "cra-template": "1.2.0",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0",
     "firebase-tools": "^13.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
-    
     "web-vitals": "^4.2.4"
   },
   "scripts": {
