--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@firebase/auth": "^1.9.1",
+    "@firebase/firestore": "^4.7.10",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "add": "^2.0.6",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
-    "firebase": "^11.2.0",
+    "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0",
     "firebase-tools": "^13.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
