--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.30.0",
     "web-vitals": "^4.2.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jest": "^27.5.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
