--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "@emotion/styled": "^11.14.0",
     "@firebase/auth": "^1.9.1",
     "@firebase/firestore": "^4.7.10",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "add": "^2.0.6",
+    "bulma": "^1.0.3",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "firebase-tools": "^13.30.0",
+    "font-awesome": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
